<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HyperMarketrecycleView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    >

<androidx.cardview.widget.CardView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"

    app:cardCornerRadius="40dp"
    app:cardElevation="1dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/HyperMarketImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hypermartket_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/HyperMarketName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storeName"
        android:textAlignment="center"
        android:layout_below="@id/HyperMarketImage"
        android:layout_marginTop="-10dp"
        android:textColor="#000000"
        android:textFontWeight="20"
        />

    <TextView
        android:id="@+id/HyperMarketID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/hypermarket_id"
        android:visibility="invisible"
        android:layout_below="@id/HyperMarketName"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
</RelativeLayout>