<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HypermarketScreen">


    <include layout="@layout/categories" />

    <RelativeLayout
        android:id="@+id/hyperscreenbanner"
        android:layout_width="match_parent"
        android:layout_height="250dp">



        <ImageView

            android:padding="15dp"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:src="@drawable/bestdeals" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/bestDeals"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:fontFamily="@font/roboto_black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:layout_marginTop="5dp"
            android:text="@string/bestDealDesc"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:fontFamily="@font/roboto_black" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/seeallboarder"
            android:padding="4dp"
            android:text="@string/seeAll"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:fontFamily="@font/roboto_black" />
    </RelativeLayout>


</LinearLayout>