<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetail">

    <ImageView
        android:id="@+id/ProductDetailImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1D1D1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="117dp" />

        <TextView
            android:id="@+id/ProductDetailDiscPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="TextView"
            android:textColor="@color/price"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ProductDetailOriPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/dash"
            android:fontFamily="@font/roboto_black"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/ProductDetailDiscPrice" />

        <TextView
            android:id="@+id/productDetailPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/ProductDetailOriPrice"
            app:layout_constraintStart_toEndOf="@+id/ProductDetailOriPrice"
            app:layout_constraintTop_toTopOf="@+id/ProductDetailOriPrice" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/description"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/ProductDetailOriPrice" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/stock"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/expdate"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/ProductDetailExpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/textView21" />
        />

        <TextView
            android:id="@+id/ProductDetailStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/textView20" />
        />

        <TextView
            android:id="@+id/ProductDetailDesc"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:isScrollContainer="true"
            android:paddingRight="20dp"
            android:scrollbars="vertical"
            android:text="TextView"

            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/textView19" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnProductDetailCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#929090"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/price"
                android:bottomLeftRadius="10dp"
                android:bottomRightRadius="10dp"
                android:text="@string/addtpcart"
                android:topLeftRadius="10dp"
                android:topRightRadius="10dp"

                />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="13dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/productDetailQtyPicker" />

        <EditText
            android:id="@+id/productDetailQtyPicker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="8dp"
            android:autoText="false"
            android:editable="true"
            android:ems="10"
            android:inputType="number"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView25"
            app:layout_constraintVertical_bias="0.529" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>